[package]
name = "BiliupApi"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "一个封装好的自用库"

[dependencies]
anyhow = "1.0"
biliup = "0.1.11"
indicatif = "0.17.0-rc"
futures = "0.3.17"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["blocking","stream","json"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
async_static = "0.1.3"
once_cell = "1.20.2"
log = "0.4.22"
